tests/rosetta/transpiler/Scala/distance-and-bearing.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/distance-and-bearing.scala:129: error: reassignment to val
    br = br + BigInt(360).toString.toDouble
       ^
/workspace/mochi/tests/rosetta/transpiler/Scala/distance-and-bearing.scala:191: error: value icao is not a member of Any
    val line: String = String.valueOf(round(dist.toString.toDouble, BigInt(1))) + "\t" + String.valueOf(round(bear.toString.toDouble, BigInt(0))) + "\t" + ap.icao + "\t" + ap.country + " " + ap.name
                                                                                                                                                              ^
/workspace/mochi/tests/rosetta/transpiler/Scala/distance-and-bearing.scala:191: error: value country is not a member of Any
    val line: String = String.valueOf(round(dist.toString.toDouble, BigInt(1))) + "\t" + String.valueOf(round(bear.toString.toDouble, BigInt(0))) + "\t" + ap.icao + "\t" + ap.country + " " + ap.name
                                                                                                                                                                               ^
/workspace/mochi/tests/rosetta/transpiler/Scala/distance-and-bearing.scala:191: error: value name is not a member of Any
    val line: String = String.valueOf(round(dist.toString.toDouble, BigInt(1))) + "\t" + String.valueOf(round(bear.toString.toDouble, BigInt(0))) + "\t" + ap.icao + "\t" + ap.country + " " + ap.name
                                                                                                                                                                                                  ^
four errors found
